Página home dinâmica

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logoprincipal">
-            <img src="./imagens/LogoSite.png" width="180" alt="Logo do site">
+            <img src="./img/LogoSite.png" width="180" alt="Logo do site">
         </div>
 
         <div id="title">
@@ -47,8 +47,13 @@
         </aside>
 
         <article class="banner">
-            <img src="./imagens/Banner.png" alt="Banner Principal Site">
+            <img src="./img/Banner.png" alt="Banner Principal Site">
         </article>
+    
+    <section id="destinos">
+        <div id="cards-container"></div>
+    </section>
+
     </main>
 
     <footer>
@@ -56,6 +61,7 @@
             <p>Próximo Destino - 2025 - Todos os direitos reservados</p>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
