Página detalhes dos itens

--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,7 @@
             <img src="./img/Banner.png" alt="Banner Principal Site">
         </article>
     
-    <section id="destinos">
-        <div id="cards-container"></div>
-    </section>
+    <section id="cards-container"></section>
 
     </main>
 
