--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -2,12 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Detalhes do Destino</title>
+  <title>Detalhes</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Detalhes</h1>
-  <section id="detalhes-container"></section>
+  <h1 class="titulo-pagina">DETALHES</h1>
+
+  <section id="detalhes-container" class="detalhes-container">
+  </section>
 
   <script src="app.js"></script>
 </body>
